# vectorkit_app

./: CMakeLists.txt  README.md  main.cpp
include/: vectorkit.h
src/: Vector1D.cpp  Vector2D.cpp  VectorND.cpp
